# small_cs_im

./: Cargo.toml  readme.md
conn-websocket/: Cargo.toml
conn-websocket/src/: main.rs
conn-websocket/src/auth/: handshake.rs  mod.rs  session.rs
conn-websocket/src/conn/: conn.rs  mod.rs
conn-websocket/src/dispatch/: collection.rs  dispatch.rs
conn-websocket/src/message/: chat.rs  protocol.rs
conn-websocket/src/session/: conn.rs  mod.rs  room.rs  session.rs
ha/: Cargo.toml
im/: Cargo.toml
im/src/: main.rs
im/src/auth/: errors.rs  handshake.rs  mod.rs  session.rs
im/src/dispatch/: collection.rs  dispatch.rs  mod.rs
im/src/message/: chat.rs  mod.rs  protocol.rs
im/src/session/: conn.rs  room.rs
