[package]
name = "conn-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures-util = "0.3.29"
log = "0.4.20"
serde = {version = "1.0.190", features = ["std", "derive"]}
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
tungstenite = "0.20.1"
